# Image-Editor

./: CMakeLists.txt  README.md  deploy.ps1
resources/: get-files.py  icons.qrc  resources.rc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: ImageDocument.cpp  ImageDocument.h
src/ui/: brightnesscontrastdialog.cpp  brightnesscontrastdialog.h  imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h
